--- a/Import/Variants/Import/Form/labs_VariantOption.xml
+++ b/Import/Variants/Import/Form/labs_VariantOption.xml
@@ -9,7 +9,7 @@
    <Item type="Body" id="2C0CC2CBD22542BBBCB8F3BC08D0F207" action="add">
     <bg_color>#FFFFFF</bg_color>
     <sort_order>128</sort_order>
-    <source_id keyed_name="Variant Option" type="Form">438A8EE21E5A4F6FA62BAFD737BA9ECE</source_id>
+    <source_id keyed_name="labs_VariantOption" type="Form">438A8EE21E5A4F6FA62BAFD737BA9ECE</source_id>
     <Relationships>
      <Item type="Field" id="641960A318FE4F6A9BC6CB2091EC27D8" action="add">
       <display_length_unit>px</display_length_unit>
