Fix error on saving Order item
Error message: "Failed to get the Order ItemType."

--- a/Import/Variants/Import/Form/labs_OrderConfig.xml
+++ b/Import/Variants/Import/Form/labs_OrderConfig.xml
@@ -91,7 +91,7 @@
 		{
 			return;
 		}
-		var resItem = innovator.newItem("Order", "ResolveVariants");
+		var resItem = innovator.newItem("labs_Order", "labs_ResolveVariants");
 		resItem.setID(document.item.getAttribute("id"));
 		resItem.setAttribute("getBom","1");
 		resItem = resItem.apply();
